# bscauth

./: .gitignore  CMakeLists.txt  README.md
include/: common.h
src/consumer/: consumer.cpp
src/producer/: producer.cpp
